--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -31,16 +31,16 @@
         ]
       },
       "ECMA2Yaml": {
-        "SourceXmlFolder": "dotnet/xml",
-        "OutputYamlFolder": "dotnet/api",
+        "SourceXmlFolder": "E2E_P_Dotnet_2018_3_2_16_24_19/xml",
+        "OutputYamlFolder": "E2E_P_Dotnet_2018_3_2_16_24_19/api",
         "Flatten": true,
-        "id": "dotnet-template"
+        "id": "E2E_P_Dotnet_2018_3_2_16_24_19"
       },
       "SplitTOC": [
-        "dotnet/api/dotnet-template/toc.yml"
+        "E2E_P_Dotnet_2018_3_2_16_24_19/api/E2E_P_Dotnet_2018_3_2_16_24_19/toc.yml"
       ],
       "DiffFolder": [
-        "dotnet/api"
+        "E2E_P_Dotnet_2018_3_2_16_24_19/api"
       ]
     }
   ],
